--- a/AutoPiAndroid/src/main/res/layout/activity_main.xml
+++ b/AutoPiAndroid/src/main/res/layout/activity_main.xml
@@ -11,6 +11,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to the Dashboard" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/titleLabel" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Light"
+        android:id="@+id/lightSwitch"
+        android:checked="false"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/titleLabel"
+        android:layout_alignLeft="@+id/titleLabel" />
 
 </RelativeLayout>
