--- a/AutoPiAndroid/src/main/res/layout/activity_main.xml
+++ b/AutoPiAndroid/src/main/res/layout/activity_main.xml
@@ -1,28 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/titleLabel" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Light"
-        android:id="@+id/lightSwitch"
-        android:checked="false"
-        android:layout_marginTop="22dp"
-        android:layout_below="@+id/titleLabel"
-        android:layout_alignLeft="@+id/titleLabel" />
-
-</RelativeLayout>
+    android:layout_height="match_parent" />
