--- a/AutoPiAndroid/src/main/res/layout-land/activity_login.xml
+++ b/AutoPiAndroid/src/main/res/layout-land/activity_login.xml
@@ -37,14 +37,15 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
-                android:src="@drawable/logo"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:adjustViewBounds="false"
                 android:scaleType="fitCenter"
-                android:adjustViewBounds ="false"
                 android:cropToPadding="false"
-                android:baselineAlignBottom="false" />
+                android:baselineAlignBottom="false"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/logo" />
 
             <EditText
                 android:id="@+id/username"
